fix: Prevent select menu from jumping around

--- a/src/views/SignIn.scss
+++ b/src/views/SignIn.scss
@@ -14,6 +14,7 @@
   form {
     select {
       display: block;
+      min-width: 180px;
       margin: 0 auto 1.5em auto;
     }
   }
